
Sat Aug  7 20:48:17 UTC 2010
----------------------------

Factoring continues into Root, Config, SelfControl
Add syslogging
Add menus
Add about
Add viewing active blocks (almost)

Sat Aug  7 07:57:54 UTC 2010
----------------------------

Factored GUI stuff into SelfControl::UI.
Got build to install icons and desktop file. Still will need to run
'desktop-file-install /usr/share/applications/selfcontrol.desktop' manually
to get it added to the Applications->Internet menu.
You can no longer just copy the main script to upgrade, modules do things
now.

Thu Aug  5 12:03:10 UTC 2010
----------------------------

Updated config file version (automatic upgrade of old versions).
Changed config file location detection to avoid having to use
preserve environment on sudo (security sanity).
Block time now in hours/minutes (5 minute interval), slider gives
pretty value display.

Thu Aug  5 08:30:48 UTC 2010
----------------------------

Added a rough /etc/hosts file hijack.  Hosts given as a name (example.com)
instead of just an IP are added to the hosts file at 127.0.0.2.  That
address is chosen to not interfere with any real servers running on the
usual 127.0.0.1 (localhost) address.  Future plans will probably match
on the address via iptables rules to redirect to a localhost:8888 or
something web proxy for whitelist and/or just nagging the user who
tries anyway.

This should help a bit with hosts that change DNS info often either
round-robin or dynamic.  iptables can't do this as it's in the
application layer vs the network layer.

Thanks to Eric Kow for the request.

Mon Aug  2 11:44:16 UTC 2010
----------------------------

Looking better for a good whitelist functionality.  Found and tested
a bit of the HTTP::Proxy module for a forced server.  And found out
iptables module ipt_owner which allows rules to match based on the
owner of the socket connecting.  This should be enough to block the
user without interfering with system functions (DHCP/NTP).  So we